--- a/styles.css
+++ b/styles.css
@@ -8,22 +8,23 @@ body {
     height: 100vh;
     margin: 0;
     direction: rtl;
+    overflow: hidden;
 }
 
 .game-title {
-    font-size: 36px;
+    font-size: 4vw; /* Responsive font size */
     text-shadow: 2px 2px #000;
-    margin-top: 20px;
+    margin-top: 2vh;
 }
 
 .score-container {
     position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 30px;
+    top: 2vh;
+    right: 2vw;
+    font-size: 2.5vw;
     font-weight: bold;
     background-color: #fff;
-    padding: 10px 20px;
+    padding: 1vh 2vw;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
@@ -32,7 +33,7 @@ body {
 
 .game-container {
     background-color: #fff;
-    padding: 20px;
+    padding: 2vh 2vw;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -40,54 +41,59 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 90vw;
+    max-width: 1200px;
+    height: auto;
+    max-height: 90vh;
+    overflow-y: auto;
 }
 
 .word-display {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 3vw; /* Responsive font size */
+    margin-bottom: 2vh;
 }
 
 .input-container {
-    margin-bottom: 20px;
+    margin-bottom: 2vh;
 }
 
 #guessInput {
-    padding: 10px;
-    font-size: 18px;
-    width: 60px;
+    padding: 1vh;
+    font-size: 2vw;
+    width: 10vw;
     text-align: center;
-    margin-left: 10px;
+    margin-left: 1vw;
 }
 
 button {
-    padding: 10px 20px;
-    font-size: 18px;
+    padding: 1vh 2vw;
+    font-size: 2vw;
     cursor: pointer;
+    margin-top: 1vh;
 }
 
 .message {
-    margin-bottom: 20px;
-    font-size: 18px;
+    margin-bottom: 2vh;
+    font-size: 2.5vw; /* Responsive font size */
 }
 
 .letters-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 2vh;
     flex-basis: 100%;
 }
 
 .letter {
     background-color: #add8e6;
-    padding: 10px;
-    margin: 5px;
+    padding: 1vh;
+    margin: 0.5vw;
     border-radius: 4px;
     cursor: pointer;
-    width: 40px;
+    width: 5vw;
     text-align: center;
-    font-size: 20px;
+    font-size: 2vw;
     font-weight: bold;
 }
 
@@ -109,11 +115,11 @@ button {
 
 .animation-container {
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 2vh;
+    left: 2vw;
 }
 
 #hangman {
-    width: 150px;
+    width: 15vw;
     height: auto;
 }
